当たり判定の実装(仮)

--- a/ProjectBabel000.vcxproj
+++ b/ProjectBabel000.vcxproj
@@ -157,6 +157,8 @@
     <ClInclude Include="bg.h" />
     <ClInclude Include="calculation.h" />
     <ClInclude Include="camera.h" />
+    <ClInclude Include="collision.h" />
+    <ClInclude Include="collision_rectangle3D.h" />
     <ClInclude Include="debug_proc.h" />
     <ClInclude Include="fade.h" />
     <ClInclude Include="game.h" />
@@ -196,6 +198,8 @@
     <ClCompile Include="bg.cpp" />
     <ClCompile Include="calculation.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="collision.cpp" />
+    <ClCompile Include="collision_rectangle3D.cpp" />
     <ClCompile Include="debug_proc.cpp" />
     <ClCompile Include="fade.cpp" />
     <ClCompile Include="game.cpp" />
